Updates from Overleaf

--- a/thesis/paper/sections/1_introduction/researchQuestions.tex
+++ b/thesis/paper/sections/1_introduction/researchQuestions.tex
@@ -6,26 +6,20 @@ We have listed the problems that we are interested to solve in the section above
 
 \paragraph{How can we re-imagine front-end, and improve it in such a way that:}
 \begin{enumerate}
-  \item from the \underline{users perspective}, for \underline{all applications} it:
+  \item from the \underline{users perspective} it:
   \begin{enumerate}
     \item presents a consistent User Experience (UX) ?
     \item works consistently on all supported devices and platforms ?
     \item allow users to customize the look and feel ?
     \item guarantees accessibility ?
-    \item guarantees privacy ?
-    \item guarantees security ?
+    \item guarantees security and privacy ?
   \end{enumerate}
-  \item from the \underline{data-providers perspective}, it:
+  \item from the \underline{developers perspective}, it:
   \begin{enumerate}
-    \item eliminates the need to create visually-appealing front-end applications ?
     \item eliminates the need to create accessible front-end applications ?
     \item eliminates the need to create front-end applications for every device / platform ?
+    \item minimises the need to maintain front-end applications ?
+    \item brings product development costs to a minimum?
+    
   \end{enumerate}
-\end{enumerate}
-
-\paragraph{How can we create an alternate front-end realm that:}
-\begin{enumerate}
-  \item brings product development costs to a minimum?
-  \item enables more variability of software products in the market?
-  \item unifies the experience, so individual developers and large companies compete on the same ground?
 \end{enumerate}
