--- a/thesis/paper/sections/7_discussion/index.tex
+++ b/thesis/paper/sections/7_discussion/index.tex
@@ -2,8 +2,118 @@
 
 \chapter{Discussion} \label{discussion}
 
-\input{sections/7_discussion/futureWork}
+In this thesis, we presented Intertext and the core technologies we developed for this project. We first talked about IUIDL, an XML-based description language that can be used to create generic descriptions of fully functional front-ends without specifying any kind of device or style constraints. Then, we introduced Intertext clients, native applications for the web and several platforms that can render IUIDL natively and effectively taking host environment and user preferences into account. We also clarified how IUIDL can be assembled on the server side based on custom business logic and be served from an endpoint. We provided RecipeApp to serve as an example.
 
-- Sum up main contributions
-- How you address the research questions
-- Future work
+\section{Problem Statement}
+
+In the \nameref{problemStatement} section, we listed the problems we are intending to address with the Intertext project. We grouped these problems under two main categories; problems that are affecting end users, and problems that are affecting developers that are building products for their end users.
+
+We created efficient, streamlined, standardised, accessible and customisable components for Intertext applications to be built with. This standardised approach guarantees that every instance of every component looks consistent. This also solves the intrusive advertisement issue as Intertext clients are in full control of the rendering process. While it cannot stop websites from advertising, the advertisements are also subject to these provided UI components, thus eliminating any non-standard attention-grabbing annoyances that users commonly faces. We made sure that these components are fully accessible, guaranteeing the same level of accessibility for all Intertext apps. We allow users to customise these components, solving lack of customisability problem. We eliminated foreign code execution and had Intertext clients be in full control to solve security and privacy issues. Intertext clients expect XML-based messages from Intertext apps; as no code execution takes place, third party applications has no way of accessing or manipulating users device.
+
+As for developers, we minimised the effort of building and maintaining user facing applications. IUIDL is unified and universal, once developers builds and serves their applications, it works natively on all Intertext clients on all platforms/devices. Thus, we removed the need to build different apps for different platforms. The provided Intertext components are all made accessible, lifting this responsibility from the developer. Moreover, we reduced the front-end application development process to assembling and serving IUIDL. It is agnostic of any technology, framework, device, platform; eliminating the maintenance efforts.
+
+\section{Research Question}
+
+In the \nameref{researchQuestions} section we presented the questions that we aimed to answer in this thesis. We asked focused, specific and actionable questions. In this section, we will discuss how we answered these questions, and recap the answers to these questions.
+
+\paragraph{How can we re-imagine front-end, and improve it in such a way that:}
+\begin{enumerate}
+  \item from the \underline{users perspective} it:
+  \begin{enumerate}
+    \item \underline{presents a consistent User Experience (UX) ?}
+    
+    Intertext comes with building blocks that consists of standardised UI components that guarantees every instance of every component looks consistent. This guarantees consistency not only within a single application, but also across different applications and even across different platforms.
+    
+    \item \underline{works consistently on all supported devices and platforms ?}
+
+    Intertext offers a number of clients for multiple platforms that offers Native experiences; such as Intertext for web, iOS, Android, macOS, Windows etc. Once an Intertext application is built using the building blocks we provide, it can run on every Intertext client on every device.
+    
+    \item \underline{allow users to customize the look and feel ?}
+    
+    Thanks to the UI components being standardised, Intertext clients allows users to customise them and/or apply pre-defined themes. With this approach, user decides on how applications across the Intertext client looks and feels like.
+    
+    \item \underline{guarantees accessibility ?}
+
+    Intertext comes with standardised UI components, that are implemented with full accessibility support. Every application built on Intertext platform uses the same set of UI components, which guarantees the same level of consistent accessibility support for every Intertext application.
+
+    \item \underline{guarantees security and privacy ?}
+
+    Intertext's approach to combat security and privacy vulnerabilities is to take away the ability for applications to execute code on user devices all together. Intertext clients expects applications to implement their business logic on the server side, and only send instructions to them in a text-based and non-executable format. After receiving these instructions as text, Intertext clients only parses them, and no foreign code execution happens. Data providers have no influence on the workings of Intertext clients, other than providing simple text-based instructions. Intertext clients are in full control of what happens on users devices, providing a fully secure environment to the user.
+    
+  \end{enumerate}
+  \item from the \underline{developers perspective}, it:
+  \begin{enumerate}
+    \item \underline{ eliminates the need to create accessible front-end applications ?}
+
+    As we have already established, IUIDL is agnostic of the view layer. Using IUIDL, developers do not implement "actual UI elements", they implement descriptions of a UI. Intertext clients are responsible for interpreting and rendering these descriptions in an accessible manner. The accessibility implementations are already handled, without needing any further action from the developer.
+    
+    \item \underline{eliminates the need to create front-end applications for every} \newline \underline{device / platform ?}
+
+    Once an Intertext application is being served from an endpoint, it works on any Intertext client on any platform. IUIDL is universal, device agnostic, thus applications built on IUIDL are also universal and device agnostic. It's components, commands, even the layout system runs predictably across all devices of all screen sizes and capabilities, lifting concerns arising from cross-platform development from developers plate.
+    
+    \item \underline{minimises the need to maintain front-end applications ?}
+
+    Building Intertext applications are merely a matter of assembling and serving XML code from server side. Developers do not need a separate front-end project, any existing backend can be used to serve IUIDL. This way, maintenance requirement of Intertext applications are eliminated.
+    
+    \item \underline{brings product development costs to a minimum ?}
+
+    Building an Intertext application that works natively on all devices and platforms is a matter of assembling and serving IUIDL code from a backend. It removes the need to create and maintain front-end applications, thus bringing down the development costs significantly.
+    
+  \end{enumerate}
+\end{enumerate}
+
+\section{Limitations}
+
+Intertext platform comes with some limitations arises from its nature. While the novel approach enables some advantages that would otherwise not be possible in traditional front-end applications, there are some drawbacks that comes with it. 
+
+\begin{enumerate}
+
+    \item \textbf{Complex Front-end Features}: Intertext applications can only transfer IUIDL to Intertext clients, and feature-wise, they are limited with what Intertext clients and IUIDL offer can offer. Therefor, it is not possible to build custom/complex feature-rich front-end applications.
+
+    \item \textbf{Offline Support}: Intertext clients are like web browsers, they make a request to an endpoint, and render the IUIDL code they receive. As a result, Intertext does not offer offline support out of the box. However, it is possible to work around this by creating a locally running IUIDL server that serves the application through a local endpoint, and pointing the Intertext client to it.
+    
+    \item \textbf{Design and Branding}: Intertext stands as a user-centric platform that gives end-users full control of the look-and-feel of applications. IUIDL is designed as a style-agnostic language with this approach in mind. As a result, it is not possible for developers to implement their own branding and/or style system. It is however possible to add their logos or any other visuals.
+    
+    \item \textbf{Custom Domains and Standalone Applications}: Intertext applications has to live within Intertext clients. Intertext clients can be thought of like a web browser, and Intertext applications like websites. In a similar sense, Intertext applications needs an Intertext client to be rendered. For the Intertext web client, apps has to be rendered under the domain that the Intertext web client hosted at. For instance, if \textit{example.com} were to be rendered at an Intertext client under \textit{intertext.com}, the domain would look something like \textit{intertext.com/?site=example.com}. For mobile platforms, Intertext applications can live under a native Intertext client. And for desktop platforms, Intertext clients can live under a native Intertext Desktop applications. Therefor, Intertext applications cannot be served under their own top-level domain, and they cannot be standalone applications. It should be noted that all these problems can be resolved. For the web, a custom chromium-based browser could be built with an Intertext client built-in to it. And as in the previous example, when users visits \textit{example.com} it would detect IUIDL code received by the web server and it would render it through the built-in Intertext client. For mobile and desktop platforms, custom operating systems can be built (possibly based on Android for mobile, and based on Linux for desktop) with an Intertext client built into it, which can support Intertext applications natively without the need for a wrapper application. Intertext support can also be built in to existing browsers and operating systems as well.
+    
+\end{enumerate}
+
+
+\chapter{Conclusion} \label{conclusion}
+
+In the beginning there were the problems (section \ref{problemStatement}) that we laid out. We started our journey with these problems in mind, and came out of it with an outright solution that we believe can effectively change the way front-end applications are built and consumed by the users. Intertext project is still a work in progress, and has a long way to go before it could present itself as a viable solution. But we do believe that this is a step in the right direction, and that it can reach to a level of becoming a standard in building and consuming user facing applications.
+
+\section{Contributions}
+
+In the \nameref{contributions} section, we have listed our projects main contributions. As a recap, here are the main contributions of the Intertext project:
+
+\begin{itemize}
+    
+    \item \textbf{IUIDL}: We created an XML-based User Interface description language. We designed it to be device and style agnostic. We gave it the ability to not only describe UI elements, but also flow of actions and commands to make the applications interactive.
+    
+    \item \textbf{Intertext Engine}: We have centralized the entire logic of parsing, handling and rendering IUIDL into one single engine. Intertext clients that are Javascript-based can use the engine directly; and for clients that are not Javascript-based, a wrapper Node.js application can be built to have it communicate based on the requirements. With Intertext engine being used, clients only have to implement the view layer, and the rest is handled by the engine. Given the open source nature of Intertext, the true power can be realised when community-driven Intertext clients are developed that solves specific problems from specific domains that our clients cannot solve. With this in mind, the engine is a crucial aspect that will enable more clients to be built, and that every client works consistently. 
+    
+    \item \textbf{Intertext Clients}: We aim to create Intertext clients that covers all the mainstream consumer devices and certain use cases. More details on the future of Intertext is discussed thoroughly in the \nameref{futureWork} section, but as of writing of the thesis, we have implemented the Intertext web client. We created a responsive experience so that it can comfortably be used on mobile browsers until native clients are released.
+    
+    \item \textbf{Concepts and Ideas}: Perhaps the most important contribution of our project is the novelty of some of the concepts we have introduced. UIDL's are not new, it is an active research topic that has many published papers and projects that covers different corners. We took this concept, adopted it to our use case, and created a novel approach to how front-end's are build in order to solve the aforementioned problems.
+
+\end{itemize}
+
+
+\section{Future Work} \label{futureWork}
+
+Intertext project is a work in progress. At the time of the thesis, we only implemented the core Engine that handles IUIDL syntax, and the web client that utilises it. Also, some of the features of Intertext mentioned throughout the thesis are not yet available but are planned and on the roadmap. With that said, below are some of the future plans for the Intertext project and the clients:
+
+\begin{enumerate}
+    \item \textbf{More Intertext Clients}: As of now, we only developed the Intertext web client. But for this project to be meaningful, there needs to be Intertext clients for every major platform. Thus, Intertext clients for mobile platforms (iOS, Android) and also for desktop environments (macOS, Windows, Linux) are planned. Additionally, an Intertext command-line client with a text-based UI is currently under development.
+    
+    \item \textbf{Themes}: Currently Intertext web client comes with a light and a dark theme. But we plan to build a lot more themes that users can chose from. Moreover, we plan to allow users to create their own themes, and possibly share the themes they have created with other users.
+    
+    \item \textbf{Media queries}: We plan to add support for media queries to allow users to adjust the layout based on screen dimensions.
+    \item \textbf{Refined control on persisted storage}: Intertext client allows applications to store data on users device / browser. We plan to improve this ability, and support more options such as expiration dates.
+    
+    \item \textbf{Cross-origin requests}: Intertext clients do not allow cross-origin requests. That is, an application served from an endpoint can only make requests to the same endpoint it is served from. However there are some cases that requires requests outside; for instance loading images, videos, resources from CDN servers, embedding content and so on. To enable this, we plan to allow outside requests once the permission is granted by the user. Also for transparency, we plan to create an interface that displays the request history logs to allow users to investigate the data flow.
+    
+    \item \textbf{Cross-origin storage read}: Intertext clients by default do not allow applications to read what other applications stored. While this is important to ensure privacy, this can also be used in a good way to enhance user experience. For instance, if a user was logged in at \texttt{example.com}, application served at \texttt{blog.example.com} might want to read the stored user token in order to carry out the session. Therefor, we plan to create a permission flow that asks permission from the users for the read request.
+    
+\end{enumerate}
