--- a/thesis/paper/thesis.tex
+++ b/thesis/paper/thesis.tex
@@ -12,6 +12,7 @@
 \usepackage{soul}
 \usepackage{float}
 \usepackage{template/cisa}
+\usepackage{tcolorbox}
 
 \input{thesis/paper/utils/json-lang}
 \input{thesis/paper/utils/xml-lang}
@@ -58,7 +59,6 @@
 \input{sections/3_solution/index}
 \input{sections/4_implementation/index}
 \input{sections/5_evaluation/index}
-\input{sections/6_conclusion/index}
 \input{sections/7_discussion/index}
 
 % Appendix (optional)
