--- a/thesis/paper/sections/1_introduction/methodology.tex
+++ b/thesis/paper/sections/1_introduction/methodology.tex
@@ -4,6 +4,6 @@
 
 To identify and effectively address all these problems, we utilized the Design Science Research Methodology (DSRM) \cite{DSRM} to carry out our research. DSRM is a commonly adopted research framework that provides six executable steps to guide the researcher in being consistent with prior work and provides a theoretical process for doing the research, and guides through presenting and evaluating the outcome. 
 
-The first step of DSRM is \textbf{identifying the problem and the motivation}. It is not uncommon for research and inventions to stem from a problem or a necessity. Similarly, in our case, the problem was out there; we only needed to focus on it to better understand the issues we are tackling. In the \nameref{problemStatement} (\ref{problemStatement}) section, we discussed and justified what problems are we attempting to solve with Intertext. Then we proceeded to the next step, \textbf{defining the objectives for a solution}. As we narrowed down the problems that we attempt to solve in the \nameref{problemStatement} (\ref{problemStatement}) section, we drafted our objectives to approach this problem. We explained these objectives in detail in the \nameref{researchQuestions} (\ref{researchQuestions}) section. Then, we were ready to take the next step of \textbf{design and development}. In the following sections \hl{TODO: add sections}, we explained in detail our development process, all the challenges and design decisions that we have taken in order to address the problems in the best way possible. 
+The first step of DSRM is \textbf{identifying the problem and the motivation}. It is not uncommon for research and inventions to stem from a problem or a necessity. Similarly, in our case, the problem was out there; we only needed to focus on it to better understand the issues we are tackling. In \nameref{problemStatement}, we discussed and justified what problems we are attempting to solve with Intertext. Then we proceeded to the next step, \textbf{defining the objectives for a solution}. As we narrowed down the problems that we attempt to solve in \nameref{problemStatement}, we drafted our objectives to approach this problem. We explained these objectives in detail in \nameref{researchQuestions}. Then, we were ready to take the next step of \textbf{design and development}. In the sections \nameref{solution} and \nameref{implementation}, we explained in detail our development process, all the challenges and design decisions that we have taken in order to address the problems in the best way possible. 
 
-Once we had a working prototype in our hands, we created a simple backend application that uses Intertext as its front-end. This sample application served two purposes; it demonstrated how IUIDL could be dynamically served from a backend, and it was used for the user evaluation. Consequently, we used this sample application to introduce Intertext to the users, communicate its goals and motivations, and then collect feedback. This last step combines the final three steps of \textbf{demonstration}, \textbf{evaluation} and \textbf{communication} into one, which is explained in details in \hl{TODO: add section} section.
+Once we had a working prototype, we created a simple Intertext application, RecipeApp, as explained in detail in \nameref{evaluation} section. This application served as a demonstration for developers on how IUIDL could be dynamically served from a backend. We also introduced Intertext to end-users, communicated its goals and motivations, and then collected feedback. These concludes the final three steps of \textbf{demonstration}, \textbf{evaluation} and \textbf{communication} into one.
